# tiny_gtp

./: .gitignore  README.md  pyproject.toml  test.py
src/: bigram.mojo  common.mojo  embedding.mojo  encoder.mojo  main.mojo  test.mojo  tokenizer.mojo
