[project]
name = "tiny-gtp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Samuel Ibarra", email = "Samuel.E.Ibarra@dell.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_gtp"]
